--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="main.js" defer></script>
+  <link rel="stylesheet" href="style.css" />
   <title>Music Search</title>
 </head>
 <body>
+  <div id="page">
+    <h1>Music Search</h1>
+    <form class="search" >
+      <input type="search">
+      <button>Submit</button>
+    </form>
+    <div class="results">Search Results:</div>
+</div>
 </body>
 </html>
