Moved fixed elements to HTML, added clear to replace results with new search, started pulling other data into result list

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,14 @@
   <link rel="stylesheet" href="style.css" />
   <title>Music Search</title>
 </head>
+
 <body>
-  <div id="page"></div>
+  <h1>Music Search</h1>
+  <div id="page">
+    <input id="search" type="search">
+    <button id="submit">Submit</button>
+    <div id="results"></div>
+  </div>
 </body>
+
 </html>
