--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Music Search</h1>
   <div id="page">
-    <input id="search" type="search">
+    <input id="search" type="search" placeholder="Type here" required>
     <button id="submit">Submit</button>
     <div id="results"></div>
   </div>
