Audio preview plays, style is better, working on errors next.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 
 <body>
-  <h1>Music Search</h1>
   <div id="page">
-    <input id="search" type="search" placeholder="Type here" required>
+    <h1>Music Search</h1>
+    <audio controls src="" id="player">Audio Not Supported</audio>
+    <div id="search">
+    <input id="box" type="search" placeholder="Type here" required>
     <button id="submit">Submit</button>
+    </div>
     <div id="results"></div>
   </div>
 </body>
