--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Music Search</h1>
     <audio controls src="" id="player">Audio Not Supported</audio>
     <div id="search">
-    <input id="box" type="search" placeholder="Type here" required>
-    <button id="submit">Submit</button>
+      <input id="box" type="search" placeholder="Type here">
+      <button id="submit">Submit</button>
     </div>
     <div id="results"></div>
   </div>
